--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+ariadne = "^0.20.1"
+starlette = "^0.31.1"
+uvicorn = "^0.23.2"
 
 
 [build-system]
